--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,21 @@
     <string name="device_not_supported">Device not supported</string>
     <string name="device_not_supported_message">FFmpeg is not supported on your device</string>
 
+
+    <!--登录注册-->
+    <string name="login_title">登录葡萄账户</string>
+    <string name="mobile">手机号码</string>
+    <string name="login_password">登录密码</string>
+    <string name="regist_password">密码(6-18位)</string>
+    <string name="login">登录</string>
+    <string name="reg_user">注册新用户</string>
+    <string name="forget_password">忘记密码</string>
+    <string name="register_title">注册葡萄账户</string>
+    <string name="next">下一步</string>
+    <string name="graph_verify">图形验证码</string>
+    <string name="sms_verify">验证码</string>
+    <string name="get_verify">获取验证码</string>
+    <string name="cancel">取消</string>
+
+
 </resources>
